# 99thScratch

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  README.txt  main.cpp  qml.qrc
CUDA/: EM.cu  EM.cuh  mykernels.cu  mykernels.cuh
Scene3D/: AABB.cpp  AABB.h  ArrowMesh.cpp  ArrowMesh.h  ConeMesh.cpp  ConeMesh.h  CuboidMesh.cpp  CuboidMesh.h  CylinderMesh.cpp  CylinderMesh.h  GeometryRendererAbstract.h  MaterialAbstract.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  PosNormal.h  SceneGraphModel.cpp  SceneGraphModel.h  SceneNode.cpp  SceneNode.h  SimulationSceneNode.cpp  SimulationSceneNode.h  SphereMesh.cpp  SphereMesh.h  VectorField.cpp  VectorField.h  VectorFieldRenderer.cpp  VectorFieldRenderer.h  vec3D.cpp  vec3D.h
Sim/: AtomState.h  EM_Simulation.cpp  EM_Simulation.h  LJ_Parameters.h  LJ_Simulation.cpp  LJ_Simulation.h  Simulation.h
Widgets/: CollapsibleSection.cpp  CollapsibleSection.h  LJ_AtomsOptions.cpp  LJ_AtomsOptions.h  MainWindow.cpp  MainWindow.h  SceneTree.cpp  SceneTree.h  SceneWidget.cpp  SceneWidget.h  SimulationControls.cpp  SimulationControls.h  SimulationDisplay.cpp  SimulationDisplay.h  VecDisplay.cpp  VecDisplay.h
assets/: assets.qrc
shaders/: basic.frag  basic.vert  shaders.qrc  vector_field.vert
